force-app/main/default/objects/OFAC_Log__c/OFAC_Log__c.object-meta.xml
<CustomObject>
    <label>OFAC Log</label>
    <nameField>
        <displayFormat>OFAC-{00000000}</displayFormat>
        <label>OFAC Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OFAC Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>