force-app/main/default/objects/OFAC_Log__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>genesis__Applications__c</referenceTo>
    <relationshipLabel>OFAC Log</relationshipLabel>
    <relationshipName>OFAC_Log</relationshipName>
    <type>Lookup</type>
</CustomField>